--- a/src/crx/index.html
+++ b/src/crx/index.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <meta charset="utf-8">
-    <script src="js/pmaker-crx.js"></script>
+    <script type="module" src="popup.js"></script>
 </head>
 <body>
     <form id="form">
