--- a/src/web/index.html
+++ b/src/web/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>Password Maker</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/pmaker.css">
+<link rel="stylesheet" type="text/css" href="/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="/pmaker.css">
 </head>
 <body>
     <div class="container">
@@ -56,6 +56,6 @@
             <p>This is the online version of <a href="https://github.com/rrutkows/password-maker">Password Maker</a>.
         </footer>
     </div>
-    <script type="text/javascript" src="js/pmaker-web.js"></script>
+    <script type="module" src="pmaker.js"></script>
 </body>
 </html>
