Format with prettier.

--- a/src/crx/index.html
+++ b/src/crx/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <title></title>
-    <meta charset="utf-8">
-    <script type="module" src="popup.js"></script>
-</head>
-<body>
-    <form id="form">
-        <p><input type="password" name="masterPassword" autofocus>
-        <p><input type="text" name="domainName">
-        <p><input type="submit" name="generatePasswordButton">
-    </form>
-</body>
+    <head>
+        <title></title>
+        <meta charset="utf-8" />
+        <script type="module" src="popup.js"></script>
+    </head>
+    <body>
+        <form id="form">
+            <p><input type="password" name="masterPassword" autofocus /></p>
+            <p><input type="text" name="domainName" /></p>
+            <p><input type="submit" name="generatePasswordButton" /></p>
+        </form>
+    </body>
 </html>
