--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,61 +1,111 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Password Maker</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="/pmaker.css">
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1>Password Maker</h1>
-        </header>
-        <section>
-            <form id="password-maker-form" name="password-maker-form" onsubmit="return false;" action="" class="form-horizontal">
-                <div class="form-group">
-                    <label for="master-password" class="control-label">Master password</label>
-                    <div class="form-control-wrapper">
-                        <input type="password" id="master-password" name="master-password" class="form-control input-sm" autofocus>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Password Maker</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" type="text/css" href="/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="/pmaker.css" />
+    </head>
+    <body>
+        <div class="container">
+            <header>
+                <h1>Password Maker</h1>
+            </header>
+            <section>
+                <form
+                    id="password-maker-form"
+                    name="password-maker-form"
+                    onsubmit="return false;"
+                    action=""
+                    class="form-horizontal"
+                >
+                    <div class="form-group">
+                        <label for="master-password" class="control-label"
+                            >Master password</label
+                        >
+                        <div class="form-control-wrapper">
+                            <input
+                                type="password"
+                                id="master-password"
+                                name="master-password"
+                                class="form-control input-sm"
+                                autofocus
+                            />
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label for="url" class="control-label">URL</label>
-                    <div class="form-control-wrapper">
-                        <input type="text" id="url" name="url" class="form-control input-sm">
+                    <div class="form-group">
+                        <label for="url" class="control-label">URL</label>
+                        <div class="form-control-wrapper">
+                            <input
+                                type="text"
+                                id="url"
+                                name="url"
+                                class="form-control input-sm"
+                            />
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label for="password-length" class="control-label">Password length</label>
-                    <div class="form-control-wrapper">
-                        <input type="number" id="password-length" name="password-length" class="form-control input-sm" min="3">
+                    <div class="form-group">
+                        <label for="password-length" class="control-label"
+                            >Password length</label
+                        >
+                        <div class="form-control-wrapper">
+                            <input
+                                type="number"
+                                id="password-length"
+                                name="password-length"
+                                class="form-control input-sm"
+                                min="3"
+                            />
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label for="algorithm" class="control-label">Algorithm</label>
-                    <div class="form-control-wrapper">
-                        <select id="algorithm" name="algorithm" class="form-control input-sm"></select>
+                    <div class="form-group">
+                        <label for="algorithm" class="control-label"
+                            >Algorithm</label
+                        >
+                        <div class="form-control-wrapper">
+                            <select
+                                id="algorithm"
+                                name="algorithm"
+                                class="form-control input-sm"
+                            ></select>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-control-wrapper">
-                        <input type="submit" value="Generate password" class="btn btn-primary">
+                    <div class="form-group">
+                        <div class="form-control-wrapper">
+                            <input
+                                type="submit"
+                                value="Generate password"
+                                class="btn btn-primary"
+                            />
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label for="password" class="control-label sr-only">Password</label>
-                    <div class="form-control-wrapper">
-                        <input type="text" id="password" name="password" class="form-control" readonly>
+                    <div class="form-group">
+                        <label for="password" class="control-label sr-only"
+                            >Password</label
+                        >
+                        <div class="form-control-wrapper">
+                            <input
+                                type="text"
+                                id="password"
+                                name="password"
+                                class="form-control"
+                                readonly
+                            />
+                        </div>
                     </div>
-                </div>
-            </form>
-        </section>
-        <hr>
-        <footer>
-            <p>This is the online version of <a href="https://github.com/rrutkows/password-maker">Password Maker</a>.
-        </footer>
-    </div>
-    <script type="module" src="pmaker.js"></script>
-</body>
+                </form>
+            </section>
+            <hr />
+            <footer>
+                <p>
+                    This is the online version of
+                    <a href="https://github.com/rrutkows/password-maker"
+                        >Password Maker</a
+                    >.
+                </p>
+            </footer>
+        </div>
+        <script type="module" src="pmaker.js"></script>
+    </body>
 </html>
