--- a/test/frameset.html
+++ b/test/frameset.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <title></title>
-    <meta charset="utf-8">
-</head>
-<frameset rows="50%, 50%">
-    <frameset cols="50%, 50%">
-        <frame src="form.html"></frame>
-        <frame src="http://localhost:8080/form.html"></frame>
+    <head>
+        <title></title>
+        <meta charset="utf-8" />
+    </head>
+    <frameset rows="50%, 50%">
+        <frameset cols="50%, 50%">
+            <frame src="form.html"></frame>
+            <frame src="http://localhost:8080/form.html"></frame>
+        </frameset>
+        <frame src="iframes.html"></frame>
     </frameset>
-    <frame src="iframes.html"></frame>
-</frameset>
 </html>
