Serve test forms in karma.

--- a/test/frameset.html
+++ b/test/frameset.html
@@ -7,7 +7,7 @@
     <frameset rows="50%, 50%">
         <frameset cols="50%, 50%">
             <frame src="form.html"></frame>
-            <frame src="http://localhost:8080/form.html"></frame>
+            <frame src="http://localhost:9876/base/test/form.html"></frame>
         </frameset>
         <frame src="iframes.html"></frame>
     </frameset>
