--- a/test/iframes.html
+++ b/test/iframes.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <iframe src="form.html"></iframe>
-        <iframe src="http://localhost:8080/form.html"></iframe>
+        <iframe src="http://localhost:9876/base/test/form.html"></iframe>
         <script>
             if (parent == window)
                 document.write(
