--- a/src/web/index.html
+++ b/src/web/index.html
@@ -24,7 +24,10 @@
                         <label for="master-password" class="control-label"
                             >Master password</label
                         >
-                        <div class="form-control-wrapper">
+                        <div
+                            id="master-password-wrapper"
+                            class="form-control-wrapper"
+                        >
                             <input
                                 type="password"
                                 id="master-password"
@@ -32,6 +35,11 @@
                                 class="form-control input-sm"
                                 autofocus
                             />
+                            <canvas
+                                id="master-password-icon"
+                                width="18"
+                                height="18"
+                            ></canvas>
                         </div>
                     </div>
                     <div class="form-group">
